# prollyrs

./: .prettierrc.json  .prettierrc.toml  Cargo.toml  README.me  build.rs  go.mod  go.sum
goprolly/: main.go
src/: error.rs  ffi.rs  main.rs  z.rs
